# pubplt

./: README.md  pyproject.toml
src/pubplt/: __init__.py
