[tool.poetry]
name = "pubplt"
version = "0.1.0"
description = ""
authors = ["Sahara Yuta <shryt0206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pyright]
pythonVersion = "3.11"
include = ["src/**/*.py"]
typeCheckingMode = "standard"

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]
line-length = 70
indent-width = 4

[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
select = ["C", "E", "F", "W"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
# if,forなどの複雑性をどれくらい許容するか。if,for文が11以上あると警告
# C901
max-complexity = 10
